--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -15,6 +15,8 @@
     <!-- built files will be auto injected -->
   </body>
   <style>
-    
+    Body{
+      background-color: lightgrey;
+    }
   </style>
 </html>
